argocd/hiae/prd/manifests/apps/shared-api-reports/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer-prod-shared-api-reports-apps
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  creationTimestamp: "2023-12-07T02:55:45Z"
  generation: 2
  name: shared-api-reports-apps
  namespace: apps-shared-api
  resourceVersion: "209862699"
  uid: 3a8c6cc2-f814-417b-b19f-9990dad223a8
spec:
  rules:
  - host: reports-api.hoobox.one
    http:
      paths:
      - backend:
          service:
            name: shared-api-reports-apps
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - reports-api.hoobox.one
    secretName: reports-api-hoobox-one-tls
status:
  loadBalancer:
    ingress:
    - hostname: a9decaed647ed4fa7bd2dd616a00e46b-1650260671.sa-east-1.elb.amazonaws.com
